[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dialogue.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ui/dialogue_background_weird.png" type="Texture" id=2]
[ext_resource path="res://assets/art/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/sfx/Blip_2.wav" type="AudioStream" id=4]
[ext_resource path="res://src/UI/DialogueVoicePlayer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0.439216, 1, 1 )
font_data = ExtResource( 3 )

[node name="Dialogue" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 500.0
margin_bottom = 150.0
texture = ExtResource( 2 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 22.0
margin_top = 12.0
margin_right = 472.0
margin_bottom = 143.0
custom_colors/default_color = Color( 0, 1, 0.870588, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DialogueVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
script = ExtResource( 5 )

[connection signal="timeout" from="TypeTimer" to="." method="_on_TypeTimer_timeout"]
[connection signal="finished" from="DialogueVoicePlayer" to="." method="_on_DialogueVoicePlayer_finished"]
